--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,15 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+
+@import './base/modern_normalize';
+@import './utils/variables';
+@import './components/hero-header';
+@import './components/products';
+@import './components/about';
+@import './components/advantages';
+@import './components/gallery';
+@import './components/customer-reviews';
+@import './components/contacts';
+@import './components/footer';
