--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,9 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
+
+// Ниже идут переменные для адаптивки, менять нельзя без согласования
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1050px;
