--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,1 +1,7 @@
 $text-color-black: #000000;
+
+// Ниже идут переменные для адаптивки, менять нельзя без согласования
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1080px;
