--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,4 +1,11 @@
 $text-color-black: #000000;
+$text-color-white: #ffffff;
+$text-color-red: #d41443;
+$text-color-pink: #ffa5ba;
+$text-color-grey: #907e82;
+
+$background-pink: #fff5f6;
+$background-white: #e5e5e5;
 
 // Ниже идут переменные для адаптивки, менять нельзя без согласования
 
