--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,4 +1,4 @@
 <p>hero-header section</p>
 <header class="header">
     <div class="container">
-    <nav class="hero-header-nav">
+    <nav class="hero-header-nav1">
