--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,4 +1,6 @@
 <p>hero-header section</p>
 <header class="header">
-    <div class="container">
-    <nav class="hero-header-nav1">
+  <div class="container">
+    <nav class="hero-header-nav1"></nav>
+  </div>
+</header>
