добавляет разметку секции

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,1 +1,52 @@
-<p>customer-reviews section</p>
+<section class="reviews-section">
+    <div class="container">
+        <h2 class="visually-hidden">Customer reviews</h2>
+        <ul class="reviews-set">
+            <li class="reviews-list">
+                <div class="customer-pfoto">
+                    <picture>
+                        <img srcset=
+                            "./images/customer/customer1-1x.jpg 1x,
+                            ./images/customer/customer1-2x.jpg 2x" 
+                            src="./images/customer/customer1-1x.jpg"
+                            alt="фотография покупателя" />
+                    </picture>
+                </div>
+                <p class="review-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                congue. Lorem ipsum primis in nibh vel risus.</p>
+                <h3 class="castomer-info">Emily, Los Angeles</h3>
+            </li>
+            <li class="reviews-list">
+                <div class="customer-pfoto">
+                    <picture>
+                        <img 
+                        srcset=
+                            "./images/customer/customer2-1x.jpg 1x,
+                            ./images/customer/customer2-2x.jpg 2x" 
+                            src="./images/customer/customer2-1x.jpg" 
+                            alt="фотография покупателя" />
+                    </picture>
+                </div>
+                <p class="review-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla
+                    quam nunc, accumsan
+                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                <h3 class="castomer-info">Emily, Los Angeles</h3>
+            </li>
+            <li class="reviews-list">
+                <div class="customer-pfoto">
+                    <picture>
+                        <img srcset=
+                            "./images/customer/customer3-1x.jpg 1x,
+                            ./images/customer/customer3-2x.jpg 2x" 
+                            src="./images/customer/customer3-1x.jpg"
+                            alt="фотография покупателя" />
+                    </picture>
+                </div>
+                <p class="review-text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla
+                    quam nunc, accumsan
+                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                <h3 class="castomer-info">Emily, Los Angeles</h3>
+            </li>
+        </ul>
+    </div>
+</section>
