--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import './base/modern_normalize';
 @import './utils/variables';
+@import './utils/visually-hidden';
 @import './components/hero-header';
 @import './components/products';
 @import './components/about';
@@ -16,3 +17,4 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
+
