--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,14 +4,14 @@
     <h2 class="about__title">how it’s made?</h2>
     <picture class="about__picture">
       <source
-        media="(min-width: 1050px)"
+        media="(min-width: 1080px)"
         srcset="
           ../images/about-images/cow-desktop@1x.webp 1x,
           ../images/about-images/cow-desktop@2x.webp 2x
         "
         type="image/webp" />
       <source
-        media="(min-width: 1050px)"
+        media="(min-width: 1080px)"
         srcset="
           ../images/about-images/cow-desktop@1x.png 1x,
           ../images/about-images/cow-desktop@2x.png 2x
@@ -30,19 +30,19 @@
           ../images/about-images/cow-tablet@2x.png 2x
         " />
       <source
+        media="(min-width: 480px)"
         srcset="
           ../images/about-images/cow-mobile@1x.webp 1x,
           ../images/about-images/cow-mobile@2x.webp 2x
         "
         type="image/webp" />
-      <img
-        class="about__img"
+      <source
+        media="(min-width: 480px)"
         srcset="
           ../images/about-images/cow-mobile@1x.png 1x,
           ../images/about-images/cow-mobile@2x.png 2x
-        "
-        src="../images/about-images/cow-mobile@1x.png"
-        alt="корова и молоко"
+        " />
+      <img class="about__img" src="../images/about-images/cow-mobile@1x.png" alt="корова и молоко"
     /></picture>
     <p class="about__lead">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
