--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,2 +1,90 @@
-<p>contacts section</p>
-<h1>Задача Тим лида</h1>
+<section class="contacts">
+  <div class="container contacts-container">
+    <h2 class="contacts-title visually-hidden">Контакты</h2>
+    <ul class="contacts-list list">
+      <li class="contacts-item">CAFE</li>
+      <li class="contacts-item">
+        Chicago
+        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      </li>
+    </ul>
+    <div class="contacts-data">
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-item">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+    </div>
+    <ul class="contacts-list list">
+      <li class="contacts-item">
+        <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      </li>
+      <li class="contacts-item">
+        <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+      </li>
+    </ul>
+
+
+    <ul class="contacts-list list">
+      <li class="contacts-item">FOOD TRUCK</li>
+      <li class="contacts-item">
+        Chicago
+        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      </li>
+    </ul>
+    <div class="contacts-data">
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-item">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+    </div>
+    <ul class="contacts-list list">
+      <li class="contacts-item">
+        <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      </li>
+      <li class="contacts-item">
+        <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+      </li>
+    </ul>
+
+
+    <ul class="contacts-list list">
+      <li class="contacts-item">CAFE</li>
+      <li class="contacts-item">
+        Chicago
+        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      </li>
+    </ul>
+    <div class="contacts-data">
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-item">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+    </div>
+    <ul class="contacts-list list">
+      <li class="contacts-item">
+        <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      </li>
+      <li class="contacts-item">
+        <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+      </li>
+    </ul>
+</section>
+
