add images in Gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,36 @@
-<p>gallery section</p>
+<section class="gallery">
+    <div class="container">
+        <picture>
+            <source media="(min-width: 1280px)" srcset="
+                ./images/gallery/gallerydesktop@webp.webp    1x,
+                ./images/gallery/gallerydesktop2x@webp.webp 2x
+                " type="image/webp">
+            <source media="(min-width: 1280px)" srcset="
+                ./images/gallery/gallerydesktop.jpg    1x,
+                ./images/gallery/gallerydesktop2x.jpg 2x
+                ">
+        
+            <source media="(min-width: 768px)" srcset="
+                ./images/gallery/gallerytablet@webp.webp    1x,
+                ./images/gallery/gallerytablet2x@webp.webp 2x
+                " type="image/webp">
+            <source media="(min-width: 768px)" srcset="
+                ./images/gallery/gallerytablet.jpg    1x,
+                ./images/gallery/gallerytablet2x.jpg 2x
+                ">
+        
+            <source media="(min-width: 320px)" srcset="
+                ./images/gallery/gallerymobile@webp.webp    1x,
+                ./images/gallery/gallerymobile2x@webp.webp 2x
+                " type="image/webp">
+            <source media="(min-width: 320px)" srcset="
+                ./images/gallery/gallerymobile.jpg    1x,
+                ./images/gallery/gallerymobile2x.jpg 2x
+                ">
+        
+            <img src="#" alt="gallery">
+        </picture>
+    </div>
+</section>
+
+
