--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,43 +6,43 @@
       <source
         media="(min-width: 1080px)"
         srcset="
-          ../images/about-images/cow-desktop@1x.webp 1x,
-          ../images/about-images/cow-desktop@2x.webp 2x
+          images/about-images/cow-desktop@1x.webp 1x,
+          images/about-images/cow-desktop@2x.webp 2x
         "
         type="image/webp" />
       <source
         media="(min-width: 1080px)"
         srcset="
-          ../images/about-images/cow-desktop@1x.png 1x,
-          ../images/about-images/cow-desktop@2x.png 2x
+          images/about-images/cow-desktop@1x.png 1x,
+          images/about-images/cow-desktop@2x.png 2x
         " />
       <source
         media="(min-width: 768px)"
         srcset="
-          ../images/about-images/cow-tablet@1x.webp 1x,
-          ../images/about-images/cow-tablet@2x.webp 2x
+          images/about-images/cow-tablet@1x.webp 1x,
+          images/about-images/cow-tablet@2x.webp 2x
         "
         type="image/webp" />
       <source
         media="(min-width: 768px)"
         srcset="
-          ../images/about-images/cow-tablet@1x.png 1x,
-          ../images/about-images/cow-tablet@2x.png 2x
+          images/about-images/cow-tablet@1x.png 1x,
+          images/about-images/cow-tablet@2x.png 2x
         " />
       <source
         media="(min-width: 480px)"
         srcset="
-          ../images/about-images/cow-mobile@1x.webp 1x,
-          ../images/about-images/cow-mobile@2x.webp 2x
+          images/about-images/cow-mobile@1x.webp 1x,
+          images/about-images/cow-mobile@2x.webp 2x
         "
         type="image/webp" />
       <source
         media="(min-width: 480px)"
         srcset="
-          ../images/about-images/cow-mobile@1x.png 1x,
-          ../images/about-images/cow-mobile@2x.png 2x
+          images/about-images/cow-mobile@1x.png 1x,
+          images/about-images/cow-mobile@2x.png 2x
         " />
-      <img class="about__img" src="../images/about-images/cow-mobile@1x.png" alt="корова и молоко"
+      <img class="about__img" src="images/about-images/cow-mobile@1x.png" alt="корова и молоко"
     /></picture>
     <p class="about__lead">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
