Create base html layout for product section.
1. Прописав для наглядності одразу назви класів по БЕМУ.
2. Щоб відобразити фото використав псевдоелементи. і колір (поки прописав вручну, без змінних)
3.

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,1 +1,38 @@
-<p>products section</p>
+<section class="section products-section">
+    <div class="container">
+        <label for="title"> 100% natural </label>
+        <h2 class="section__title" name="title">Products</h2>
+        <ul class="products">
+            <li class="products__item cream">
+                <h3 class="products__name ">Ice Cream</h3>
+                <p class="products__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe architecto accusamus
+                commodi tenetur placeat illum consequuntur.</p>
+                <a class="products__link" href="">
+                    <svg class="products__icon" width="40" height="40">
+                        <use href=""> </use>
+                    </svg>
+                </a>
+            </li>
+            <li class="products__item coffee">
+                <h3 class="products__name">Ice Coffee</h3>
+                <p class="products__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe architecto accusamus
+                commodi tenetur placeat illum consequuntur.</p>
+                <a class="products__link" href="">
+                    <svg class="products__icon" width="40" height="40">
+                        <use href=""> </use>
+                    </svg>
+                </a>
+                   
+            </li>
+            <li class="products__item  milk" >
+                <h3 class="products__name">Milkshakes</h3>
+                <p class="products__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe architecto accusamus commodi tenetur placeat illum consequuntur.</p>
+                <a class="products__link" href="">
+                    <svg class="products__icon" width="40" height="40">
+                        <use href=""> </use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
