--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,46 @@
 <p>footer section</p>
+<footer class="page-footer">
+  <div class="container">
+    <div>
+      <p>homemade ice cream made</p>
+      <p>with passion</p>
+    </div>
+
+    <div>
+      <ul>
+        <li>
+          <a href="https://github.com/" target="_blank" title="Github">
+            <svg width="20px" height="20px">
+              <use href="./images/sprites.svg#icon-github"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a href="https://web.telegram.org/k/" target="_blank" title="Telegram">
+            <svg width="20px" height="16px">
+              <use href="./images/sprites.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+            <svg width="9px" height="20px">
+              <use href="./images/sprites.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <p>Feel free to contact</p>
+      <a href="tel:+610383766284">+61 (0) 383 766 284</a>
+    </div>
+
+    <div>
+      <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
