--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,24 +1,19 @@
-<section class="contacts">
+      <section class="contacts">
   <div class="container contacts-container">
     <h2 class="contacts-title visually-hidden">Контакты</h2>
-    <ul class="contacts-list list">
-      <li class="contacts-item">CAFE</li>
-      <li class="contacts-item">
-        Chicago
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      </li>
-    </ul>
+
+    <div class="contacts-card">
+    <div class="contacts-headline">
+      <p class="contacts-representation">CAFE</p>
+      <h3 class="contacts-item">Chicago</h3>
+      <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+    </div>
     <div class="contacts-data">
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
-        </li>
-        <li class="contacts-item">
-          Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
-        </li>
-      </ul>
+        <h3 class="contacts-item">Monday - Friday</h3>
+        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        
+        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <p class="contacts-time">08:00 AM - 16:00 PM</p>
     </div>
     <ul class="contacts-list list">
       <li class="contacts-item">
@@ -28,26 +23,20 @@
         <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
       </li>
     </ul>
+    </div>
 
-
-    <ul class="contacts-list list">
-      <li class="contacts-item">FOOD TRUCK</li>
-      <li class="contacts-item">
-        Chicago
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      </li>
-    </ul>
+    <div class="contacts-card">
+    <div class="contacts-headline">
+      <p class="contacts-representation">FOOD TRUCK</p>
+      <h3 class="contacts-item">Los Angeles</h3>
+      <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+    </div>
     <div class="contacts-data">
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
-        </li>
-        <li class="contacts-item">
-          Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
-        </li>
-      </ul>
+        <h3 class="contacts-item">Monday - Friday</h3>
+        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        
+        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <p class="contacts-time">08:00 AM - 16:00 PM</p>
     </div>
     <ul class="contacts-list list">
       <li class="contacts-item">
@@ -57,26 +46,20 @@
         <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
       </li>
     </ul>
+    </div>
 
-
-    <ul class="contacts-list list">
-      <li class="contacts-item">CAFE</li>
-      <li class="contacts-item">
-        Chicago
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      </li>
-    </ul>
+    <div class="contacts-card">
+    <div class="contacts-headline">
+      <p class="contacts-representation">CAFE</p>
+      <h3 class="contacts-item">New York</h3>
+      <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+    </div>
     <div class="contacts-data">
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
-        </li>
-        <li class="contacts-item">
-          Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
-        </li>
-      </ul>
+        <h3 class="contacts-item">Monday - Friday</h3>
+        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        
+        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <p class="contacts-time">08:00 AM - 16:00 PM</p>
     </div>
     <ul class="contacts-list list">
       <li class="contacts-item">
@@ -86,5 +69,5 @@
         <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
       </li>
     </ul>
+    </div>
 </section>
-
