--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 // @import './example';
 
 @import './base/modern_normalize';
+@import './base/reset';
 @import './utils/variables';
 @import './utils/visually-hidden';
 @import './components/hero-header';
@@ -17,4 +18,3 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
-
