майже закінчив about для мобілки
майже закінчив about для мобілки

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="container">
+  <div class="about__block container">
     <p class="about__label">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
     <picture class="about__picture">
@@ -44,15 +44,22 @@
         " />
       <img class="about__img" src="images/about-images/cow-mobile@1x.png" alt="корова и молоко"
     /></picture>
-    <p class="about__lead">
-      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
-      eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-    </p>
-    <p class="about__text">
-      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
-      imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
-    </p>
-    <p class="about__text">Cras massa nibh, tincidunt. Aliquam erat volutpat. Aenean accumsan.</p>
-    <button class="about__btn">Read more</button>
+    <div class="about__text-block">
+      <p class="about__lead">
+        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+        lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+      </p>
+      <p class="about__text">
+        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
+        in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
+        maximus. Cras massa nibh, tincidunt. <br class="about__br"> Aliquam erat volutpat. Aenean accumsan.
+      </p>
+    </div>
+    <button type="button" class="about__btn">Read more
+      <svg class="about__btn-icon" width="5" height="8">
+                <use href="images/sprites.svg#icon-right"></use>
+              </svg>
+    </button>
+    <div class="about__milk"></div>
   </div>
 </section>
