--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,6 +1,24 @@
 .about {
-  position: relative;
   background-color: $background-pink;
+  background-image: url(/images/about-images/milk-mobile@x1.png);
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: 100vw;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(/images/about-images/milk-mobile@x2.png);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(/images/about-images/milk-tablet@x1.png);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/about-images/milk-tablet@x2.png);
+    }
+  }
+  @media screen and (min-width: 1080px) {
+    background-image: url(/images/about-images/milk-desktop@x1.png);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/about-images/milk-desktop@x2.png);
+    }
+  }
 }
 
 .about__block {
@@ -20,6 +38,15 @@
   text-transform: uppercase;
   color: $text-color-pink;
   margin-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+  @media screen and (min-width: 1080px) {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
 }
 
 .about__title {
@@ -33,30 +60,75 @@
   text-transform: uppercase;
   color: $text-color-red;
   margin-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 1.15;
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: 1080px) {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+    margin-bottom: 55px;
+  }
+}
+
+.about__info-div {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  @media screen and (min-width: 1080px) {
+    display: flex;
+  }
 }
 
 .about__picture {
   display: block;
-  width: calc(100vh - 40px);
+  width: 100%;
+}
+
+.about__img {
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 768px) {
+    margin-right: 17px;
+  }
+  @media screen and (min-width: 1080px) {
+    margin-right: 74px;
+  }
 }
 
 .about__text-block {
+  max-width: 220px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
+  line-height: 1.62;
+  margin-top: 45px;
+  @media screen and (min-width: 768px) {
+    max-width: 340px;
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+    margin-top: 50px;
+  }
+  @media screen and (min-width: 1080px) {
+    max-width: 465px;
+    font-size: 16px;
+    line-height: 1.76;
+    margin-top: 55px;
+  }
 }
 
 .about__lead {
-  line-height: 1.62;
   color: $text-color-black;
   margin-bottom: 30px;
 }
 
 .about__text {
-  line-height: 1.62;
   color: $text-color-grey;
   margin-bottom: 15px;
 }
@@ -64,6 +136,8 @@
 .about__btn {
   display: block;
   align-self: center;
+  margin-left: auto;
+  margin-right: auto;
   height: 44px;
   min-width: 175px;
   border: none;
@@ -86,35 +160,11 @@
     margin-left: 14px;
     fill: $text-color-red;
   }
-}
-
-.about__milk {
-  position: absolute;
-  pointer-events: none;
-  bottom: 80;
-  background-image: url(/images/about-images/milk-mobile@x1.png);
-  width: 100vw;
-  height: 155px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url(/images/about-images/milk-mobile@x2.png);
-  }
   @media screen and (min-width: 768px) {
-    bottom: 70px;
-    height: 250px;
-    background-image: url(/images/about-images/milk-tablet@x1.png);
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(/images/about-images/milk-tablet@x2.png);
-    }
+    margin-top: 60px;
+    margin-left: 0;
   }
   @media screen and (min-width: 1080px) {
-    bottom: -65px;
-    height: 535px;
-    background-image: url(/images/about-images/milk-desktop@x1.png);
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(/images/about-images/milk-desktop@x2.png);
-    }
+    margin-top: 45px;
   }
 }
