--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -112,7 +112,6 @@
     max-width: 340px;
     font-size: 14px;
     line-height: 1.76;
-    letter-spacing: 0.04em;
     margin-top: 50px;
   }
   @media screen and (min-width: 1080px) {
@@ -131,6 +130,14 @@
 .about__text {
   color: $text-color-grey;
   margin-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: 1080px) {
+    font-size: 14px;
+    line-height: 1.94;
+    letter-spacing: 0.04em;
+  }
 }
 
 .about__btn {
