--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './base/reset';
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './components/body';
 @import './components/button';
 @import './components/container';
 @import './components/hero-header';
