--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -168,6 +168,8 @@
     fill: $text-color-red;
   }
   @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.31;
     margin-top: 60px;
     margin-left: 0;
   }
