--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -21,3 +21,30 @@
     height: 40px;
   }
 }
+
+
+.button--white {
+  display: block;
+  align-self: center;
+  height: 44px;
+  min-width: 175px;
+  border: none;
+  border-radius: 22px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.29;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  color: $text-color-red;
+  background-color: #ffffff;
+  &:hover {
+    background-color: #ecebeb;
+  }
+  .about__btn-icon {
+    margin-left: 14px;
+    fill: $text-color-red;
+  }
