--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -48,3 +48,12 @@
     margin-left: 14px;
     fill: $text-color-red;
   }
+
+  // Це шлях до СВГхи для ХТМЛ
+
+// <button type="button" class="about__btn">
+//           Read more
+//           <svg class="about__btn-icon" width="6" height="10">
+//             <use href="images/sprites.svg#icon-right"></use>
+//           </svg>
+//         </button>
