врахував баг кнопки
врахував баг кнопки

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -22,7 +22,6 @@
   }
 }
 
-
 .button--white {
   display: block;
   align-self: center;
@@ -48,8 +47,9 @@
     margin-left: 14px;
     fill: $text-color-red;
   }
+}
 
-  // Це шлях до СВГхи для ХТМЛ
+// Це шлях до СВГхи для ХТМЛ
 
 // <button type="button" class="about__btn">
 //           Read more
