--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,5 @@
 <section class="gallery">
+    <h2 class="visually-hidden">Gallery</h2>
     <div class="container">
         <picture>
             <source media="(min-width: 1280px)" srcset="
