--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about">
   <div class="about__block container">
-    <p class="about__label">tradition and love</p>
-    <h2 class="about__title">how it’s made?</h2>
+    <p class="section__label">tradition and love</p>
+    <h2 class="section__title">how it’s made?</h2>
     <div class="about__info-div">
       <picture class="about__picture">
         <source
