--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -4,15 +4,15 @@
   margin-right: auto;
   margin-left: auto;
 
-  @media screen and (min-width: $mobile) {
+  @media screen and (min-width: 480px) {
     width: $mobile;
   }
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     width: $tablet;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1280px) {
     width: $desktop;
   }
 }
