--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="section products-section">
     <div class="container">
         <p class="section__label">100% natural</p>
-        <h2 class="secton__title">products</h2>
+        <h2 class="section__title">products</h2>
         <ul class="products">
             <li class="products__item cream">
                 <h3 class="products__name ">Ice Cream</h3>
