--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 @import './components/body';
+@import './components/section';
 @import './components/button';
 @import './components/container';
 @import './components/hero-header';
