html without images

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,9 +1,9 @@
-<!-- <p>hero-header section</p> -->
+<p>hero-header section</p>
 <header class="header">
     <div class="header-container container">
         <nav class="header-nav">
-            <a class="logo" href=""><img src="images/hero-header/logo.svg" alt="лого" 
-            width="199px"/></a>
+            <a class="logo" href=""><img src="" alt="лого" 
+            width="199"/></a>
 
         
     </div>
