--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -12,7 +12,7 @@
     font-size: 26px;
     line-height: 1.15;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1280px) {
     font-size: 30px;
     line-height: 1.13;
     letter-spacing: 0.04em;
@@ -35,7 +35,7 @@
     line-height: 1.15;
     margin-bottom: 50px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1280px) {
     font-size: 58px;
     line-height: 1.14;
     letter-spacing: 0.06em;
