add variables for proper breakpoints, separate container width from breakpoints

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -6,8 +6,14 @@ $text-color-grey: #907e82;
 
 $background-pink: #fff5f6;
 $background-white: #e5e5e5;
-// Ниже идут переменные для адаптивки, менять нельзя без согласования
+
+//переменные для адаптивки
 
 $mobile: 480px;
 $tablet: 768px;
-$desktop: 1080px;
+$desktop: 1280px;
+
+// переменные для контейнера
+$mobile-container: 480px;
+$tablet-container: 768px;
+$desktop-container: 1080px;
