--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -5,14 +5,14 @@
   margin-left: auto;
 
   @media screen and (min-width: 480px) {
-    width: $mobile;
+    width: $mobile-container;
   }
 
   @media screen and (min-width: 768px) {
-    width: $tablet;
+    width: $tablet-container;
   }
 
   @media screen and (min-width: 1280px) {
-    width: $desktop;
+    width: $desktop-container;
   }
 }
