Стилизация, добавил кнопки

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -3,72 +3,86 @@
     <h2 class="contacts-title visually-hidden">Контакты</h2>
 
     <div class="contacts-card">
+      <p class="contacts-representation">CAFE</p>
       <div class="contacts-headline">
-        <p class="contacts-representation">CAFE</p>
         <h3 class="contacts-item">Chicago</h3>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
       <div class="contacts-data">
-        <h3 class="contacts-item">Monday - Friday</h3>
+        <h3 class="contacts-day">Monday - Friday</h3>
         <p class="contacts-time">06:00 AM - 10:00 PM</p>
 
-        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <h3 class="contacts-day">Saturday - Sunday</h3>
         <p class="contacts-time">08:00 AM - 16:00 PM</p>
       </div>
       <ul class="contacts-list list">
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
 
     <div class="contacts-card">
+      <p class="contacts-representation-truck">FOOD TRUCK</p>
       <div class="contacts-headline">
-        <p class="contacts-representation">FOOD TRUCK</p>
         <h3 class="contacts-item">Los Angeles</h3>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
       <div class="contacts-data">
-        <h3 class="contacts-item">Monday - Friday</h3>
+        <h3 class="contacts-day">Monday - Friday</h3>
         <p class="contacts-time">06:00 AM - 10:00 PM</p>
 
-        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <h3 class="contacts-day">Saturday - Sunday</h3>
         <p class="contacts-time">08:00 AM - 16:00 PM</p>
       </div>
       <ul class="contacts-list list">
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
 
     <div class="contacts-card">
+      <p class="contacts-representation">CAFE</p>
       <div class="contacts-headline">
-        <p class="contacts-representation">CAFE</p>
         <h3 class="contacts-item">New York</h3>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
       <div class="contacts-data">
-        <h3 class="contacts-item">Monday - Friday</h3>
+        <h3 class="contacts-day">Monday - Friday</h3>
         <p class="contacts-time">06:00 AM - 10:00 PM</p>
 
-        <h3 class="contacts-item">Saturday - Sunday</h3>
+        <h3 class="contacts-day">Saturday - Sunday</h3>
         <p class="contacts-time">08:00 AM - 16:00 PM</p>
       </div>
       <ul class="contacts-list list">
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-item">
+        <li class="contacts-address">
           <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
+  </div>
+  <div class="container contacts__btn">
+    <button type="button" class="contacts__btn-location">
+      Our Locations
+      <svg class="contacts__btn-icon" width="6" height="10">
+        <use href="images/sprites.svg#icon-contacts"></use>
+      </svg>
+    </button>
+    <button type="button" class="contacts__btn-franchise">
+      Franchise
+      <svg class="contacts__btn-icon" width="6" height="10">
+        <use href="images/sprites.svg#icon-contacts"></use>
+      </svg>
+    </button>
   </div>
 </section>
