--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -42,7 +42,7 @@
     font-size: 26px;
     line-height: 1.15;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     font-size: 30px;
     line-height: 1.13;
     letter-spacing: 0.04em;
@@ -65,7 +65,7 @@
     line-height: 1.15;
     margin-bottom: 50px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     font-size: 58px;
     line-height: 1.14;
     letter-spacing: 0.06em;
@@ -77,7 +77,7 @@
   @media screen and (min-width: $tablet) {
     display: flex;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     display: flex;
   }
 }
@@ -93,7 +93,7 @@
   @media screen and (min-width: $tablet) {
     margin-right: 17px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     margin-right: 74px;
   }
 }
@@ -114,7 +114,7 @@
     line-height: 1.76;
     margin-top: 50px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     max-width: 465px;
     font-size: 16px;
     line-height: 1.76;
@@ -133,7 +133,7 @@
   @media screen and (min-width: $tablet) {
     letter-spacing: 0.04em;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     font-size: 14px;
     line-height: 1.94;
     letter-spacing: 0.04em;
@@ -173,7 +173,7 @@
     margin-top: 60px;
     margin-left: 0;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     margin-top: 45px;
   }
 }
