add variables for hover colors

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,8 +4,12 @@ $text-color-red: #d41443;
 $text-color-pink: #ffa5ba;
 $text-color-grey: #907e82;
 
+$hover-grey: #ecebeb;
+$hover-red: #c7133e;
+
 $background-pink: #fff5f6;
-$background-white: #e5e5e5;
+$background-grey: #e5e5e5;
+$background-white: #ffffff;
 
 //переменные для адаптивки
 
