--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-      <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+      <p>&copy; 2019 - IceCream. All Rights Reserved.</p>
     </div>
   </div>
 </footer>
