--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,23 @@
-<p>advantages section</p>
+<p class="visually-hidden">advantages section</p>
+<div class="advantages">
+    <ul class="advantages__list">
+        <li class="advantages__item">
+            <div class="advantages__list-text">
+                <p class="advantages__text-main">721</p>
+                <p class="advantages__text-second">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </div>
+        </li>
+        <li class="advantages__item">
+            <div class="advantages__list-text">
+                <p class="advantages__text-main">16kg</p>
+                <p class="advantages__text-second">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </div>
+        </li>
+        <li class="advantages__item">
+            <div class="advantages__list-text">
+                <p class="advantages__text-main">84</p>
+                <p class="advantages__text-second">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </div>
+        </li>
+    </ul>
+</div>
