--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -3,17 +3,19 @@
   background-image: url(/images/about-images/milk-mobile@x1.png);
   background-repeat: no-repeat;
   background-position: bottom center;
-  background-size: 100vw;
+  background-size: $mobile-container;
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url(/images/about-images/milk-mobile@x2.png);
   }
   @media screen and (min-width: $tablet) {
+    background-size: $tablet-container;
     background-image: url(/images/about-images/milk-tablet@x1.png);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(/images/about-images/milk-tablet@x2.png);
     }
   }
   @media screen and (min-width: $desktop) {
+    background-size: $desktop-container;
     background-image: url(/images/about-images/milk-desktop@x1.png);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(/images/about-images/milk-desktop@x2.png);
