--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -43,5 +43,36 @@
             <a class="button__link" href="">How's made?</a>
         </li>
     </ul>
+    <div class="hero__right-part">
+        <picture class="about__picture">
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            images/hero-header/girl-desktop@x1.webp 1x,
+            images/hero-header/girl-desktop@x2.webp 2x
+          "
+          type="image/webp" />
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            images/hero-header/girl-desktop@x1.png 1x,
+            images/hero-header/girl-desktop@x2.png 2x
+          " />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            images/hero-header/girl-tablet@x1.webp 1x,
+            images/hero-header/girl-tablet@x2.webp 2x
+          "
+          type="image/webp" />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            images/hero-header/girl-tablet@x2.png 1x,
+            images/hero-header/girl-tablet@x2.png 2x
+          " />
+        <img class="hero__girl" src="images/hero-header/girl-tablet@x1.png" alt="дівчина"
+      /></picture>
+    </div>
 
 </section>
