add css and background

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,7 @@
 <section class="gallery">
     <h2 class="visually-hidden">Gallery</h2>
     <div class="container">
-        <picture>
+        <picture class="gallery-picture">
             <source media="(min-width: 1280px)" srcset="
                 images/gallery/gallerydesktop@webp.webp    1x,
                 images/gallery/gallerydesktop2x@webp.webp 2x
@@ -29,7 +29,7 @@
                 images/gallery/gallerymobile2x.jpg 2x
                 ">
         
-            <img src="#" alt="gallery">
+            <img class="gallery-img" src="#" alt="gallery">
         </picture>
     </div>
 </section>
