--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,20 +1,23 @@
 <section class="contacts">
   <div class="container contacts-container">
-    <h2 class="contacts-title visually-hidden">Контакты</h2>
+    <h2 class="contacts__title visually-hidden">Контакты</h2>
 
-    <div class="contacts-card">
+    <div class="contacts__card">
       <p class="contacts-representation">CAFE</p>
       <div class="contacts-headline">
-        <h3 class="contacts-item">Chicago</h3>
+        <p class="contacts-item">Chicago</p>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <div class="contacts-data">
-        <h3 class="contacts-day">Monday - Friday</h3>
-        <p class="contacts-time">06:00 AM - 10:00 PM</p>
-
-        <h3 class="contacts-day">Saturday - Sunday</h3>
-        <p class="contacts-time">08:00 AM - 16:00 PM</p>
-      </div>
+      <ul class="contacts-data">
+        <li class="contacts-day">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-day">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
       <ul class="contacts-list list">
         <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
@@ -25,19 +28,22 @@
       </ul>
     </div>
 
-    <div class="contacts-card">
+    <div class="contacts__card">
       <p class="contacts-representation-truck">FOOD TRUCK</p>
       <div class="contacts-headline">
-        <h3 class="contacts-item">Los Angeles</h3>
+        <p class="contacts-item">Los Angeles</p>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <div class="contacts-data">
-        <h3 class="contacts-day">Monday - Friday</h3>
-        <p class="contacts-time">06:00 AM - 10:00 PM</p>
-
-        <h3 class="contacts-day">Saturday - Sunday</h3>
-        <p class="contacts-time">08:00 AM - 16:00 PM</p>
-      </div>
+      <ul class="contacts-data">
+        <li class="contacts-day">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-day">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
       <ul class="contacts-list list">
         <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
@@ -48,19 +54,22 @@
       </ul>
     </div>
 
-    <div class="contacts-card">
+    <div class="contacts__card">
       <p class="contacts-representation">CAFE</p>
       <div class="contacts-headline">
-        <h3 class="contacts-item">New York</h3>
+        <p class="contacts-item">New York</p>
         <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <div class="contacts-data">
-        <h3 class="contacts-day">Monday - Friday</h3>
-        <p class="contacts-time">06:00 AM - 10:00 PM</p>
-
-        <h3 class="contacts-day">Saturday - Sunday</h3>
-        <p class="contacts-time">08:00 AM - 16:00 PM</p>
-      </div>
+      <ul class="contacts-data">
+        <li class="contacts-day">
+          Monday - Friday
+          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+        </li>
+        <li class="contacts-day">
+          Saturday - Sunday
+          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
       <ul class="contacts-list list">
         <li class="contacts-address">
           <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
