--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,6 +10,7 @@ $hover-red: #c7133e;
 $background-pink: #fff5f6;
 $background-grey: #e5e5e5;
 $background-white: #ffffff;
+$background-hero: #ffb8ca;
 
 //переменные для адаптивки
 
