add logo image, scss
logo, stsrt scss for header,

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -2,35 +2,49 @@
 <header class="header">
     <div class="header-container container">
         <nav class="header-nav">
-            <a class="logo" href=""><img src="" alt="лого" 
-            width="199"/></a>
+            <a class="logo" href=""><img src="./images/hero-header/logo.png" alt="лого" 
+            width="200" height="50"/></a>
+            <nav>
+              <button type="button" data-modal-open class="button--white">Buy now</button>
+              <ul class="nav-menu__list">
+                  <li class="nav-menu__item"><a href="" class="mobile-menu__link current">Home</a></li>
+                  <li class="nav-menu__item"><a href="" class="mobile-menu__link">About us</a></li>
+                  <li class="nav-menu__item"><a href="" class="mobile-menu__link">How's made?</a></li>
+                  <li class="nav-menu__item"><a href="" class="mobile-menu__link">Our products</a></li>
+                  <li class="nav-menu__item"><a href="" class="mobile-menu__link">Contact</a></li>
+              </ul>
+          </nav>
 
         
-    </div>
+    
     <!-- -------start mobile-menu------ -->
-<button type="button" class="menu-button" open-menu>
-                <svg class="menu-button__icon" width="20" height="12">
-                    <use  href=""></use>
-                </svg>
-            </button>
+      <div class="mobile-wrap">
+          <button type="button" class="menu-button" open-menu>
+          <svg class="menu-button__icon" width="20" height="12">
+              <use  href=""></use>
+          </svg>
+          </button>
 
-            <div class="mobile-menu" menu-container>
-                <button class="close-button" close-menu>
-                    <svg class="close-button__icon" width="14" height="14">
-                        <use href=""></use>
-                    </svg>
-                </button>
-                <nav>
-                    <button type="button" data-modal-open class="order-button">Buy now</button>
-                    <ul class="mobile-menu__list">
-                        <li class="mobile-menu__item"><a href="" class="mobile-menu__link current">Home</a></li>
-                        <li class="mobile-menu__item"><a href="" class="mobile-menu__link">About us</a></li>
-                        <li class="mobile-menu__item"><a href="" class="mobile-menu__link">How's made?</a></li>
-                        <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Our products</a></li>
-                        <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Contact</a></li>
-                    </ul>
-                </nav>
+        <div class="mobile-menu" menu-container>
+          <button class="close-button" close-menu>
+              <svg class="close-button__icon" width="14" height="14">
+                  <use href=""></use>
+              </svg>
+          </button>
+          <nav>
+              <button type="button" data-modal-open class="button--white">Buy now</button>
+              <ul class="mobile-menu__list">
+                  <li class="mobile-menu__item"><a href="" class="mobile-menu__link current">Home</a></li>
+                  <li class="mobile-menu__item"><a href="" class="mobile-menu__link">About us</a></li>
+                  <li class="mobile-menu__item"><a href="" class="mobile-menu__link">How's made?</a></li>
+                  <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Our products</a></li>
+                  <li class="mobile-menu__item"><a href="" class="mobile-menu__link">Contact</a></li>
+              </ul>
+          </nav>
+        </div>
+      </div>
          <!-- ---------end mobile-menu-------- --> 
+    </div>
 </header>
 <section class="hero-section">
     <h2 class="hero__title">ice cream <br> 
